*Finally* fixed issue with hitbox of homelink anchor, made footer center aligned rather than margined in.

--- a/css/main.css
+++ b/css/main.css
@@ -1,57 +1,3 @@
-.title {
-  width: 50%;
-  margin-right: 50vw;
-  margin-bottom: 5vh;
-}
-.title a {
-  text-decoration: none;
-  transition: all 250ms ease-in-out;
-  width: 30vw;
-  margin-left: 15vw;
-  margin-right: 50vw;
-  display: block;
-}
-.title a:hover {
-  transform: scale(1.035);
-}
-.title h1 {
-  margin-bottom: 0;
-  margin-top: 0;
-  margin-left: -0.325vW;
-  margin-right: none;
-  padding-right: -1;
-  align-content: left;
-  font-size: 4.2em;
-  color: #F7F7FF;
-  padding-top: 10vh;
-  padding-bottom: 1vh;
-  font-family: "Jost", sans-serif;
-  font-weight: 200;
-  font-variant: small-caps;
-  word-spacing: 0.3em;
-  width: 50vw;
-}
-.title canvas {
-  margin-top: 0;
-  margin-bottom: 1vh;
-  margin-right: 37.5vw;
-  margin-left: 0.1vw;
-  width: 12.5vw;
-  height: 0.8%;
-  background-color: #623CEA;
-}
-.title h2 {
-  margin-top: 0vh;
-  align-content: left;
-  font-size: 2.2em;
-  color: #F4BBD3;
-  font-family: "Jost", sans-serif;
-  font-weight: bold;
-  font-stretch: ultra-expanded;
-  word-spacing: 0.1em;
-  width: 50vw;
-}
-
 * {
   box-sizing: border-box;
 }
@@ -60,6 +6,8 @@ html, body {
   padding: 0;
   margin: 0;
   align-content: center;
+  display: block;
+  justify-content: center;
 }
 
 body {
@@ -90,13 +38,20 @@ body {
 }
 
 .title {
-  margin-right: 50vw;
-  margin-bottom: 5vh;
-  width: 50%;
+  margin-left: 0vw;
+  margin-right: 20vw;
+  margin-bottom: 0vh;
+  width: 75vw;
+  display: block;
 }
 .title a {
-  margin-right: 50vw;
-  margin-left: 15vw;
+  margin-right: 0vw;
+  margin-left: 14vw;
+  padding-left: 1vw;
+  padding-bottom: 1vh;
+  width: 75vw;
+  height: -1%;
+  display: inline-flex;
   text-decoration: none;
   transition: all 250ms ease-in-out;
   width: 30vw;
@@ -109,10 +64,10 @@ body {
   margin-bottom: 0;
   margin-top: 0;
   margin-left: -0.325vW;
-  margin-right: none;
-  padding-right: -1;
   padding-top: 2vh;
   padding-bottom: 1vh;
+  width: 30vw;
+  display: inline;
   align-content: left;
   font-size: 4.2em;
   color: #F7F7FF;
@@ -125,7 +80,7 @@ body {
 .title canvas {
   margin-top: 0;
   margin-bottom: 1vh;
-  margin-right: 37.5vw;
+  margin-right: 15vw;
   margin-left: 0.1vw;
   width: 12.5vw;
   height: 0.8%;
@@ -133,8 +88,9 @@ body {
 }
 .title h2 {
   margin-top: 0vh;
-  margin-right: 20vw;
-  align-content: left;
+  margin-bottom: 0;
+  display: inline;
+  width: -1vw;
   font-size: 2.2em;
   color: #F4BBD3;
   font-family: "Jost", sans-serif;
@@ -164,17 +120,21 @@ body {
 }
 
 #footer {
-  margin-left: 30vw;
-  margin-right: 30vw;
   margin-top: 0.2vh;
   margin-bottom: 0.8vh;
   padding-top: 0.4vh;
   padding-bottom: 0.8vh;
+  margin-left: 0;
+  display: flex;
+  justify-content: center;
   text-decoration: none;
   color: #2AB7CA;
   font-family: "Muli", sans-serif;
   font-weight: 300;
   font-size: 0.75em;
+}
+
+.footer {
   display: flex;
   justify-content: center;
 }
